--- a/github-deploy/learn.html
+++ b/github-deploy/learn.html
@@ -100,6 +100,8 @@ for i in range(3):
   <script src="js/stages.js"></script>
   <script src="js/world.js"></script>
   <script src="js/minigames.js"></script>
+  <!-- Load Pyodide (real Python in the browser) -->
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/auth.js"></script>
 </body>
